<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Form</class>
 <widget class="QWidget" name="Form">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>497</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Compute SPAREs</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_2">
   <item>
    <widget class="QStackedWidget" name="stackedWidget">
     <property name="styleSheet">
      <string notr="true"/>
     </property>
     <property name="currentIndex">
      <number>0</number>
     </property>
     <widget class="QWidget" name="page">
      <layout class="QVBoxLayout" name="verticalLayout_3">
       <item>
        <spacer name="verticalSpacer_2">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
           <height>40</height>
          </size>
         </property>
        </spacer>
       </item>
       <item>
        <widget class="QPushButton" name="show_SPARE_scores_from_data_Btn">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="text">
          <string>Show SPARE-* from data</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="Line" name="line">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="load_SPARE_model_Btn">
         <property name="text">
          <string>Load SPARE Model</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLabel" name="SPARE_model_info">
         <property name="text">
          <string>No SPARE-* model loaded</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="compute_SPARE_scores_Btn">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="text">
          <string>Compute SPARE-*</string>
         </property>
         <property name="checkable">
          <bool>true</bool>
         </property>
         <property name="checked">
          <bool>false</bool>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLabel" name="SPARE_computation_info">
         <property name="text">
          <string>No computation running</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QProgressBar" name="factorial_progressBar">
         <property name="value">
          <number>24</number>
         </property>
        </widget>
       </item>
       <item>
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
           <height>40</height>
          </size>
         </property>
        </spacer>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="page_2">
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
          <widget class="QLabel" name="label">
           <property name="text">
            <string>SPARE-*</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="load_other_model_Btn">
           <property name="text">
            <string>Load other model</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="add_to_dataframe_Btn">
           <property name="text">
            <string>Add to DataFrame</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
      </layout>
     </widget>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
